layout bugfixes for /wiki

--- a/NicerAppWebOS/apps/NicerAppWebOS/applications/2D/3rd-party-site.wikipedia.org/index.css
+++ b/NicerAppWebOS/apps/NicerAppWebOS/applications/2D/3rd-party-site.wikipedia.org/index.css
@@ -55,6 +55,14 @@ html, body {
     position:absolute;
     z-index : -1;
 }
+#mp-topbanner > div > div {
+    margin : 20px !important;
+}
+#footer ul { margin : 20px; }
+#footer li { color : white; }
+.mw-parser-output #articlecount>ul>li {
+    margin:20px !important;
+}
 .mw-parser-output {
     display : grid;
 }
@@ -112,11 +120,18 @@ figure[typeof~='mw:File/Thumb'] > figcaption, figure[typeof~='mw:File/Frame'] > 
 .vector-sticky-pinned-container:after {
     background : none !important;
 }
-.hlist li {
+.hlist {
     margin : 20px !important;
     flex-wrap : wrap !important;
     display : flex !important;
-    float : left !important;
+    list-style: none;           /* removes bullets */
+
+    gap: 12px 16px;
+}
+.hlist li {
+    white-space:nowrap;
+    margin : 20px !important;
+    display:inline-block !important;
 }
 .mw-parser-output li, .mp-contains-float li {
     background : rgba(0,0,255,0.46  );
