--- a/NicerAppWebOS/apps/NicerAppWebOS/applications/2D/news/index.css
+++ b/NicerAppWebOS/apps/NicerAppWebOS/applications/2D/news/index.css
@@ -287,6 +287,7 @@
     padding : 5px;
     background : rgba(0,0,50,0.27) !important;
     box-shadow : inset 0px 0px 5px 3px rgba(0,0,0,0.57) !important;
+    color : white;
 }
 
 .newsApp__item__noPaint {
